--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -359,5 +359,42 @@
     <string name="new_event">Новая падзея</string>
     <string name="diplom_work">Дыпломная праца</string>
     <string name="phisology">Псіхалогія</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(Не абавязкова)</string>
+    <string name="hour">Гадзіннік</string>
+    <string name="minute">Хвіліна</string>
+    <string name="choose_app">Выберыце дадатак</string>
+    <string name="in_main_screen">- Тут вы можаце адзначыць што вы выканалі ваша заданне з звычак, прагледзець падзеі і перайсці ў патрэбную катэгорыю.\n
+        - Доўгі націск на дату ў календары, што знаходзіцца уверсе вокны дазволіць вам дадаць новае падзея або задачу на гэты дзень у ваша расклад.</string>
+    <string name="in_categories">- Для стварэння новай катэгорыі націсніце на+.\n
+        - Доўгі націск на катэгорыю выкліча акно дзе вы можаце адрэдагаваць, выдаліць або заблакаваць яе, а таксама змяніць пароль.</string>
+    <string name="in_timetable">- Для стварэння новай запісу клікніце на +. Вы можаце выбраць адзін або адразу некалькі дзён.\n
+        - Націснуўшы на дзень тыдня вы можаце праглядзець усе запісы на дадзены дзень. \n
+        - Доўгі націск на запіс дазволіць вам выдаліць або адрэдагаваць яе.</string>
+    <string name="in_event">- Для стварэння новага падзеі націсніце на+. Таксама вы можаце ўсталяваць напамін на патрэбнае вам час.\n
+        - Доўгі націск на падзею дазволіць вам выдаліць або рэдагаваць яго.</string>
+    <string name="in_habit">Акно, якое дазволіць вам выпрацаваць пажаданую звычку.\n
+        - Для стварэння новай звычкі націсніце на+.\n
+        - Клікнуўшы на звычку вы можаце адзначыць што сёння выканалі заданне.\n
+        - Доўгі націск дазволіць выдаліць або адрэдагаваць яе. Кнопка у верхнім левым куце выкліча меню. Тут вы можаце даведацца пра свой узровень, выбраць аватарку і дадаць імя.</string>
+    <string name="in_focus">Акно створана на аснове тэорыі аб 10000 гадзін якая абвяшчае, што менавіта столькі часу трэба выдаткаваць каб дасягнуць прафесіяналізму ў абранай вобласці.\n
+        - Націснуўшы на + Вы можаце дадаць новае дзеянне, а таксама адкрыць таймер або секундамер.\n
+        - Клікнуўшы на дзеянне ў спісе вы можаце паказаць колькі выдаткавалі на яго хвілін. Час будзе падсумоўвацца.\n
+        - Доўгі націск дазволіць адкрыць таймер або секундамер адкуль час дадасца ў вашу запіс. Пры жаданні тут жа вы можаце яе выдаліць.</string>
+    <string name="in_standup">Практыка выкарыстоўваецца ў буйных кампаніях для аптымізацыі працэсу. Кожны супрацоўнік штодня піша справаздачу аб праведзенай працы і аб узніклых праблемах.\n
+        - - Кнопка + дазволіць стварыць новы стэнд ап.\n
+        - Доўгі націск на запіс выкліча акно дзе вы можаце выдаліць, адрэдагаваць або падзяліцца стэндапом.</string>
+    <string name="in_dream">Акно дзе вы можаце адсочваць час выдаткаванае на сон.\n
+        - Клікнуўшы на + Вы можаце стварыць новую запіс.\n
+        - Націснуўшы на запіс вы можаце прачытаць што вам снілася.\n
+        - Доўгі націск дазволіць адрэдагаваць або выдаліць запіс.</string>
+    <string name="in_idea">- Клікнуўшы на + Вы можаце дадаць новую ідэю.\n
+        - Націснуўшы на запіс вы можаце праглядзець карцінку, доўгі ж націск дазволіць выдаліць або адрэдагаваць запіс.</string>
+    <string name="in_finance">Акно для адсочвання вашых фінансаў.\n
+        - Уверсе картка з парадамі, якія дазволяць вам прадуктыўней распараджацца сваімі грашыма.\n
+        - Кнопкі \'даход\' і \'Расход\' дазволяць вам дадаць запіс аб тым колькі вы атрымалі грошай і колькі выдаткавалі адпаведна.\n
+        - Тут ёсць шаблонныя выдаткі, пры жаданні вы можаце стварыць свой шаблон націснуўшы на+.\n
+        - Доўгі націск на шаблон дазволіць яго выдаліць.\n
+        - Гісторыя дазволіць прасачыць ўсе вашы фінансавыя змены.</string>
+    <string name="in_setting">- Тут вы можаце змяніць тэму і мова прыкладання.</string>
+    <string name="instruction">Інструкцыя</string>
 </resources>
