--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -185,7 +185,7 @@
     <string name="description_about_app">आवेदन विवरण</string>
     <string name="blue">नीला</string>
     <string name="red">लाल</string>
-    <string name="orange">ऑरेंज</string>
+    <string name="orange">नारंगी</string>
     <string name="yellow">पीला</string>
     <string name="black">ब्लैक</string>
     <string name="green">हरा</string>
@@ -226,7 +226,7 @@
     <string name="not_correct">गलत</string>
     <string name="changePassword">पासवर्ड बदलें</string>
     <string name="unblock">अनलॉक करें</string>
-    <string name="heavenly">स्वर्गीय</string>
+    <string name="heavenly">आसमानी नीला</string>
     <string name="bilberry">ब्लूबेरी</string>
     <string name="wake_up_morning">सुबह 6 बजे उठें</string>
     <string name="read_by_minutes">15 मिनट के लिए पढ़ें</string>
@@ -360,5 +360,42 @@
     <string name="new_event">नई घटना</string>
     <string name="diplom_work">ग्रेजुएट काम</string>
     <string name="phisology">मनोविज्ञान</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(अनिवार्य नहीं)</string>
+    <string name="hour">देखो</string>
+    <string name="minute">मिनट</string>
+    <string name="choose_app">एक आवेदन का चयन करें</string>
+    <string name="in_main_screen">- यहां आप यह चिह्नित कर सकते हैं कि आपने आदतों से अपना कार्य पूरा कर लिया है, घटनाओं को देखें और वांछित श्रेणी में जाएं । \n
+- खिड़की के शीर्ष पर है कि कैलेंडर में तारीख पर लांग प्रेस आप अपने कार्यक्रम के लिए उस दिन के लिए एक नई घटना या कार्य को जोड़ने के लिए अनुमति देगा.</string>
+    <string name="in_categories">- एक नई श्रेणी बनाने के लिए, +पर क्लिक करें । \n
+- श्रेणी पर एक लंबी प्रेस एक विंडो खोलेगी जहां आप इसे संपादित, हटा या ब्लॉक कर सकते हैं, साथ ही अपना पासवर्ड भी बदल सकते हैं । </string>
+    <string name="in_timetable">- एक नई प्रविष्टि बनाने के लिए, +पर क्लिक करें ।  आप एक बार में एक या कई दिन चुन सकते हैं । \n
+- सप्ताह के दिन पर क्लिक करके, आप उस दिन के लिए सभी प्रविष्टियों को देख सकते हैं. \n
+- रिकॉर्ड पर एक लंबी प्रेस आपको इसे हटाने या संपादित करने की अनुमति देगा । </string>
+    <string name="in_event">- एक नई घटना बनाने के लिए, +पर क्लिक करें ।  आप अपनी ज़रूरत के समय के लिए एक अनुस्मारक भी सेट कर सकते हैं । \n
+- घटना पर एक लंबी प्रेस आपको इसे हटाने या संपादित करने की अनुमति देगा । </string>
+    <string name="in_habit">एक खिड़की जो आपको वांछित आदत विकसित करने की अनुमति देगी । \n
+- एक नई आदत बनाने के लिए, +पर क्लिक करें । \n
+- आदत पर क्लिक करके, आप नोट कर सकते हैं कि आपने आज कार्य पूरा कर लिया है । \n
+- एक लंबी प्रेस आपको इसे हटाने या संपादित करने की अनुमति देगा ।  बटन ऊपरी बाएँ कोने में मेनू खुल जाएगा ।  यहां आप अपने स्तर का पता लगा सकते हैं, एक अवतार चुन सकते हैं और एक नाम जोड़ सकते हैं । </string>
+    <string name="in_focus">खिड़की 10,000 घंटे के सिद्धांत के आधार पर बनाई गई थी, जिसमें कहा गया है कि यह आपके चुने हुए क्षेत्र में व्यावसायिकता प्राप्त करने के लिए आपको कितना समय बिताने की आवश्यकता है । \n
+- +पर क्लिक करके आप एक नई कार्रवाई जोड़ सकते हैं, साथ ही एक टाइमर या स्टॉपवॉच खोल सकते हैं । \n
+- सूची में एक कार्रवाई पर क्लिक करके, आप निर्दिष्ट कर सकते हैं कि आपने उस पर कितने मिनट बिताए ।  समय को अभिव्यक्त किया जाएगा । \n
+- एक लंबी प्रेस टाइमर या स्टॉपवॉच खोलेगी जहां से आपके रिकॉर्ड में समय जोड़ा जाएगा ।  आप चाहें तो इसे तुरंत हटा सकते हैं । </string>
+    <string name="in_standup">प्रक्रिया को अनुकूलित करने के लिए बड़ी कंपनियों में उपयोग किया जाने वाला अभ्यास ।  प्रत्येक कर्मचारी किए गए कार्यों और सामने आई समस्याओं पर एक दैनिक रिपोर्ट लिखता है । \n
+- - +बटन आपको एक नया स्टैंडअप बनाने की अनुमति देगा । \n
+- रिकॉर्ड पर एक लंबी प्रेस एक विंडो खोलेगी जहां आप स्टैंडअप को हटा सकते हैं, संपादित कर सकते हैं या साझा कर सकते हैं । </string>
+    <string name="in_dream">एक खिड़की जहां आप सोने में बिताए समय को ट्रैक कर सकते हैं । \n
+- +पर क्लिक करके आप एक नया रिकॉर्ड बना सकते हैं । \n
+- प्रविष्टि पर क्लिक करके आप पढ़ सकते हैं कि आपने क्या सपना देखा था । \n
+- एक लंबी प्रेस आपको एक प्रविष्टि को संपादित करने या हटाने की अनुमति देगा । </string>
+    <string name="in_idea">- +पर क्लिक करके आप एक नया विचार जोड़ सकते हैं । \n
+- रिकॉर्ड पर क्लिक करके आप तस्वीर देख सकते हैं, एक लंबी प्रेस आपको रिकॉर्ड को हटाने या संपादित करने की अनुमति देगा । </string>
+    <string name="in_finance">अपने वित्त पर नज़र रखने के लिए एक खिड़की । \n
+- शीर्ष पर युक्तियों वाला एक कार्ड है जो आपको अपने पैसे को अधिक उत्पादक रूप से प्रबंधित करने की अनुमति देगा । \n
+- \'आय\' और \'व्यय\' बटन आप क्रमशः, आप प्राप्त कितना पैसा और कितना खर्च का एक रिकॉर्ड जोड़ने के लिए अनुमति देगा.\n
+- यहां टेम्पलेट लागतें हैं, यदि आप चाहें, तो आप +पर क्लिक करके अपना टेम्पलेट बना सकते हैं । \n
+- टेम्पलेट पर एक लंबा प्रेस आपको इसे हटाने की अनुमति देगा । \n
+- इतिहास आपको अपने सभी वित्तीय परिवर्तनों को ट्रैक करने की अनुमति देगा । </string>
+    <string name="in_setting">- यहां आप एप्लिकेशन की थीम और भाषा बदल सकते हैं । </string>
+    <string name="instruction">निर्देश</string>
 </resources>
