--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -359,6 +359,43 @@
     <string name="new_event">新しいイベント</string>
     <string name="diplom_work">大学院の仕事</string>
     <string name="phisology">心理学</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(必須ではありません)</string>
+    <string name="hour">腕時計</string>
+    <string name="minute">分</string>
+    <string name="choose_app">アプリケーションの選択</string>
+    <string name="in_main_screen">-ここでは、習慣からタスクを完了したことをマークし、イベントを表示し、目的のカテゴリに移動することができます。\n
+-ウィンドウの上部にあるカレンダーの日付を長押しすると、あなたのスケジュールにその日の新しいイベントやタスクを追加することができます。</string>
+    <string name="in_categories">-新しいカテゴリを作成するには、+をクリックします。\n
+-カテゴリを長押しすると、編集、削除、またはブロックするだけでなく、パスワードを変更することができるウィンドウが開きます。</string>
+    <string name="in_timetable">-新しいエントリを作成するには、+をクリックします。 一度に1日または数日を選択できます。\n
+-曜日をクリックすると、その日のすべてのエントリを表示することができます。 \n
+-レコードを長押しすると、それを削除または編集することができます。</string>
+    <string name="in_event">-新しいイベントを作成するには、+をクリックします。 また、あなたが必要とする時間のリマインダーを設定することができます。\n
+-イベントを長押しすると、それを削除または編集することができます。</string>
+    <string name="in_habit">あなたが望む習慣を開発することを可能にするウィンドウ。\n
+-新しい習慣を作成するには、+をクリックします。\n
+-習慣をクリックすることで、あなたは今日のタスクを完了したことに注意することができます。\n
+-長押しすると、それを削除または編集することができます。 ボタン 左上隅にメニューが開きます。 ここでは、あなたのレベルを見つけ、アバターを選択し、名前を追加することができます。</string>
+    <string name="in_focus">ウィンドウは、これはあなたが選択したフィールドでプロ意識を達成するために費やす必要があるどのくらいの時間であることを述べている10,000時間の理論に基づいて作成されました。\n
+-+をクリックすると、新しいアクションを追加するだけでなく、タイマーやストップウォッチを開くことができます。\n
+-リスト内のアクションをクリックすると、あなたはそれに費やしたどのように多くの分を指定することができます。 時間は要約されます。\n
+-長押しは、時間があなたの記録に追加される場所からタイマーやストップウォッチを開きます。 ご希望の場合は、すぐに削除することができます。</string>
+    <string name="in_standup">プロセスを最適化するために大企業で使用される練習。 すべての従業員は、行われた作業と遭遇した問題について毎日のレポートを書きます。\n
+--+ボタンを使用すると、新しいスタンドアップを作成することができます。\n
+-レコードを長押しすると、削除、編集、またはスタンドアップを共有することができますウィンドウが開きます。</string>
+    <string name="in_dream">あなたが眠って過ごした時間を追跡することができますウィンドウ。\n
+-+をクリックすると、新しいレコードを作成することができます。\n
+-エントリをクリックすると、あなたが夢見ていたものを読むことができます。\n
+-長押しを使用すると、エントリを編集または削除することができます。</string>
+    <string name="in_idea">-+をクリックすると、新しいアイデアを追加することができます。\n
+-あなたが画像を表示することができますレコードをクリックすると、長押しでは、レコードを削除または編集することができます。</string>
+    <string name="in_finance">あなたの財政を追跡するためのウィンドウ。\n
+-上部には、あなたがより生産的にあなたのお金を管理することができますヒントを持つカードです。\n
+-\'収入\'と\'費用\'ボタンを使用すると、それぞれ、あなたが受け取ったどのくらいのお金とどのくらいあなたが費やしたのレコードを追加することができます。\n
+-あなたが望む場合は、+をクリックして、独自のテンプレートを作成することができ、ここにテンプレートのコストがあります。\n
+-テンプレートを長押しすると、それを削除することができます。\n
+-歴史は、あなたがすべてのあなたの財政の変化を追跡することができます。</string>
+    <string name="in_setting">-ここでは、アプリケーションのテーマと言語を変更することができます。</string>
+    <string name="instruction">指示</string>
 
 </resources>
