--- a/app/src/main/res/values-kk/strings.xml
+++ b/app/src/main/res/values-kk/strings.xml
@@ -360,5 +360,42 @@
     <string name="new_event">Жаңа оқиға</string>
     <string name="diplom_work">Дипломдық жұмыс</string>
     <string name="phisology">Психология</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(Міндетті емес)</string>
+    <string name="hour">Часы</string>
+    <string name="minute">Минуты</string>
+    <string name="choose_app">Бағдарламаны таңдаңыз</string>
+    <string name="in_main_screen">- Мұнда сіз өзіңіздің тапсырмаңызды әдеттерден аяқтағаныңызды, оқиғаларды қарап, қажетті санатқа ауысқаныңызды атап өтуге болады.\n
+        - Терезенің жоғарғы жағында орналасқан күнтізбедегі күнді ұзақ басу сіздің кестеңізге осы күнге жаңа оқиға немесе тапсырма қосуға мүмкіндік береді.</string>
+    <string name="in_categories">- Жаңа санатты құру үшін +түймесін басыңыз.\n
+        - Санатты ұзақ басу терезені ашады онда сіз оны өңдей, жоя немесе бұғаттай аласыз, сонымен қатар парольді өзгерте аласыз.</string>
+    <string name="in_timetable">- Жаңа жазбаны жасау үшін +түймесін басыңыз. Сіз бір немесе бірнеше күнді таңдай аласыз.\n
+        - Аптаның күнін басу арқылы сіз осы күнгі барлық жазбаларды көре аласыз. \n
+        - Жазбаны ұзақ басу оны жоюға немесе өңдеуге мүмкіндік береді.</string>
+    <string name="in_event">- Жаңа оқиға жасау үшін +түймесін басыңыз. Сондай-ақ, еске салғышты қажетті уақытқа орнатуға болады.\n
+        - Оқиғаны ұзақ басу оны жоюға немесе өңдеуге мүмкіндік береді.</string>
+    <string name="in_habit">Қалаған әдетті дамытуға мүмкіндік беретін терезе.\n
+        - Жаңа әдетті құру үшін +түймесін басыңыз.\n
+        - Әдетті басу арқылы сіз бүгін тапсырманы орындағаныңызды атап өтуге болады.\n
+        - Ұзақ басу оны жоюға немесе өңдеуге мүмкіндік береді. Батырма жоғарғы сол жақ бұрышта мәзір пайда болады. Мұнда сіз өзіңіздің деңгейіңізді біліп, аватарды таңдап, атын қоса аласыз.</string>
+    <string name="in_focus">Терезе 10000 сағат теориясы негізінде құрылған, онда таңдалған салада кәсібилікке жету үшін көп уақыт жұмсау керек.\n
+        - +Түймесін басу арқылы сіз жаңа әрекетті қосып, таймерді немесе секундомерді аша аласыз.\n
+        - Тізімдегі әрекетті нұқу арқылы сіз оған қанша минут жұмсағаныңызды көрсете аласыз. Уақыт қосылады.\n
+        - Ұзақ басу таймерді немесе секундомерді ашады, онда уақыт сіздің жазбаңызға қосылады. Қаласаңыз, оны дереу жоюға болады.</string>
+    <string name="in_standup">Процесті оңтайландыру үшін ірі компанияларда қолданылатын тәжірибе. Әр қызметкер күн сайын атқарылған жұмыс және туындаған проблемалар туралы есеп жазады.\n
+        - - +Түймесі жаңа AP стендін жасайды.\n
+        - Жазбаны ұзақ басу терезені ашады онда сіз стэндапты жоюға, өңдеуге немесе бөлісуге болады.</string>
+    <string name="in_dream">Ұйқы уақытын бақылауға болатын терезе.\n
+        - +Түймесін басу арқылы сіз жаңа жазба жасай аласыз.\n
+        - Жазбаны басу арқылы сіз армандаған нәрсені оқи аласыз.\n
+        - Ұзақ басу жазбаны өңдеуге немесе жоюға мүмкіндік береді.</string>
+    <string name="in_idea">- +Түймесін басу арқылы сіз жаңа идеяны қоса аласыз.\n
+        - Жазбаны басу арқылы суретті көруге болады, ұзақ басу жазбаны жояды немесе өңдейді.</string>
+    <string name="in_finance">Сіздің қаржыңызды бақылауға арналған терезе.\n
+        - Карточканың жоғарғы жағында ақшаңызды тиімді басқаруға мүмкіндік беретін кеңестер бар.\n
+        - \'Табыс\' және \'шығын \' түймелері сізге қанша ақша алғаныңыз және сәйкесінше қанша жұмсағаныңыз туралы жазба қосуға мүмкіндік береді.\n
+        - Мұнда шаблондық шығындар бар, егер қаласаңыз, шаблонды +басу арқылы жасай аласыз.\n
+        - Үлгіні ұзақ басу оны жоюға мүмкіндік береді.\n
+        - Тарих сіздің барлық қаржылық өзгерістеріңізді бақылауға мүмкіндік береді.</string>
+    <string name="in_setting">- Мұнда сіз бағдарламаның тақырыбы мен тілін өзгерте аласыз.</string>
+    <string name="instruction">Нұсқаулық</string>
 </resources>
