--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -360,5 +360,42 @@
     <string name="new_event">새로운 이벤트</string>
     <string name="diplom_work">대학원 작품</string>
     <string name="phisology">심리학</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(의무 사항은 아닙니다)</string>
+    <string name="hour">시계</string>
+    <string name="minute">분</string>
+    <string name="choose_app">응용 프로그램 선택</string>
+    <string name="in_main_screen">-여기에서 습관에서 작업을 완료했음을 표시하고 이벤트를보고 원하는 카테고리로 이동할 수 있습니다.\엔
+-창의 상단에있는 달력에서 날짜를 길게 누르면 일정에 그 날에 대한 새로운 이벤트 나 작업을 추가 할 수 있습니다.</string>
+    <string name="in_categories">-새 카테고리를 만들려면+를 클릭하십시오.\엔
+-카테고리를 길게 누르면 암호를 변경할뿐만 아니라 편집,삭제 또는 차단할 수있는 창이 열립니다.</string>
+    <string name="in_timetable">-새 항목을 만들려면+를 클릭하십시오. 한 번에 하나 또는 며칠을 선택할 수 있습니다.\엔
+-요일을 클릭하면 그 날의 모든 항목을 볼 수 있습니다. \엔
+-기록을 길게 누르면 삭제하거나 편집할 수 있습니다.</string>
+    <string name="in_event">-새 이벤트를 만들려면+를 클릭하십시오. 필요한 시간에 대한 알림을 설정할 수도 있습니다.\엔
+-이벤트를 길게 누르면 삭제하거나 편집할 수 있습니다.</string>
+    <string name="in_habit">원하는 습관을 개발할 수있는 창입니다.\엔
+-새로운 습관을 만들려면+를 클릭하십시오.\엔
+-습관을 클릭하면 오늘 작업을 완료했음을 알 수 있습니다.\엔
+-길게 누르면 삭제하거나 편집할 수 있습니다. 버튼 왼쪽 상단 모서리에 메뉴가 열립니다. 여기에서 레벨을 알아 내고 아바타를 선택하고 이름을 추가 할 수 있습니다.</string>
+    <string name="in_focus">창을 기반으로 만들어진 이론이 10,000 시간에는 이것은 당신이 얼마나 많은 시간을 보낼 필요가 달성하는 전문성에서 당신의 선택된 분야이다.\엔
+-+를 클릭하면 새로운 액션을 추가 할 수있을뿐만 아니라 타이머 또는 스톱워치를 열 수 있습니다.\엔
+-목록에서 작업을 클릭하여,당신은 당신이 그것에 지출 얼마나 많은 분을 지정할 수 있습니다. 시간이 합산됩니다.\엔
+-길게 누르면 시간이 기록에 추가 될 곳에서 타이머 또는 스톱워치가 열립니다. 원하는 경우 즉시 삭제할 수 있습니다.</string>
+    <string name="in_standup">프로세스를 최적화하기 위해 대기업에서 사용되는 연습. 모든 직원은 수행 된 작업과 발생한 문제에 대한 일일 보고서를 작성합니다.\엔
+--+버튼을 사용하면 새로운 스탠드 업을 만들 수 있습니다.\엔
+-기록을 길게 누르면 스탠드 업을 삭제,편집 또는 공유 할 수있는 창이 열립니다.</string>
+    <string name="in_dream">잠자는 데 소요되는 시간을 추적 할 수있는 창입니다.\엔
+-+를 클릭하면 새 레코드를 만들 수 있습니다.\엔
+-항목을 클릭하면 꿈꿔 왔던 것을 읽을 수 있습니다.\엔
+-길게 누르면 항목을 편집하거나 삭제할 수 있습니다.</string>
+    <string name="in_idea">-+를 클릭하면 새로운 아이디어를 추가할 수 있습니다.\엔
+-당신이 사진을 볼 수있는 기록을 클릭하면,길게 누르면 삭제하거나 기록을 편집 할 수 있습니다.</string>
+    <string name="in_finance">당신의 재정을 추적하기위한 창.\엔
+-맨 위에는 돈을 더 생산적으로 관리 할 수있는 팁이있는 카드가 있습니다.\엔
+-The\'소득\'그리고\'비용\'버튼이 있는 레코드를 추가 얼마나 많은 돈을 받았고 얼마나 소비,각각합니다.\엔
+-여기에 템플릿 비용이 있으며,원하는 경우+를 클릭하여 자신 만의 템플릿을 만들 수 있습니다.\엔
+-템플릿을 길게 누르면 삭제할 수 있습니다.\엔
+-역사는 당신이 당신의 모든 재정적 인 변화를 추적 할 수있게합니다.</string>
+    <string name="in_setting">-여기서 당신은 응용 프로그램의 테마와 언어를 변경할 수 있습니다.</string>
+    <string name="instruction">지침</string>
 </resources>
