--- a/app/src/main/res/values-ky/strings.xml
+++ b/app/src/main/res/values-ky/strings.xml
@@ -360,5 +360,42 @@
     <string name="new_event">Жаңы окуя</string>
     <string name="diplom_work">Дипломдук иш</string>
     <string name="phisology">Психология</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(Милдеттүү эмес)</string>
+    <string name="hour">Саат</string>
+    <string name="minute">Мүнөт</string>
+    <string name="choose_app">Колдонмону тандаңыз</string>
+    <string name="in_main_screen">- Бул жерде сиз, адаттары менен тапшырма аткарган окуяларды карап жана туура категорияга өтүшү керек экенин белгилей кетүү керек.\n
+        - Көптөгөн жыл бою нажатие күнү календаре, бул терезе жогору мүмкүндүк берет кошулсун жаңы окуя же милдетти, бул күнү сиздин расписаниеси.</string>
+    <string name="in_categories">- +Боюнча жаңы категория түзүү үчүн чыкылдатуу.\n
+        - Категорияда узак басуу терезе пайда болот жерде түзөт, өзгөртүү же бөгөттөн аны, ошондой эле сөздү өзгөртүү.</string>
+    <string name="in_timetable">- +Чыкылдатуу менен жаңы жазууну түзүү. Сиз бир же бир нече күн тандай аласыз.\n
+        - Жума күнү басып, сиз күнү бардык жазууларды көрө аласыз. \n
+        - Жаздырууга көпкө дейре басуу сиз аны чыгарып же түзөтүп берет.</string>
+    <string name="in_event">- Жаңы иш-чараларды түзүү үчүн +чыкылдатуу. Ошондой эле, сиз белгиленсин эскертме карата нужном Сизге кезде.\n
+        - Окуяга көпкө басуу аны чыгарып же түзөтүп берет.</string>
+    <string name="in_habit">Терезе, ал сизге мүмкүндүк берет иштеп чыгуу желаемую привычку.\n
+        - Түзүү үчүн жаңы адатты нажмите +.\n
+        - Адатты басуу менен сиз бүгүн тапшырманы аткарып жатканын белгилей кетүү мүмкүн.\n
+        - Басуу узак убакытка чейин аны чыгарып же түзөт. Баскычы жогорку сол бурчунда меню пайда кылат. Бул жерде сиз, сиздин көлөмүн билүүгө для обозначки тандап, аты кошо аласыз.</string>
+    <string name="in_focus">Терезе 10000 саат жөнүндө теориянын негизинде түзүлгөн, ал аны Тандалган аймакта кесипкөйлүккө жетүү үчүн убакыт керек экенин айтат.\n
+        - Чыкылдатуу менен+, сиз жаңы кадамдарды кошом, ошондой эле эсептөөч же секундомер ача алат.\n
+        - Тизмеде сиз ага канча мүнөт өткөргөн көрсөтөт деп аталат. Убакыт суммаланат.\n
+        - Узак басуу убактысы Сиздин кирген убакыт бирдиги же секундомер ачууга мүмкүндүк берет. Сиз ошол замат каалаган болсо, аны жок кылуу мүмкүн.</string>
+    <string name="in_standup">Практика жараянын оптималдаштыруу үчүн ири компаниялардын колдонулган. Ар бир кызматкер күн сайын аткарылган иштер жана келип чыккан көйгөйлөр жөнүндө отчет жазат.\n
+        - - +Баскычы А жаңы стендди түзүүгө мүмкүндүк берет.\n
+        - Рекорд көпкө басуу, сиз, алып салуу же сүрөтүшү мүмкүн, терезе алып келет.</string>
+    <string name="in_dream">Терезе, анда болот байкап убакыт потраченное үчүн соң.\n
+        - +Чыкылдатуу менен сиз жаңы рекорд түзө аласыз.\n
+        - Рекорд чыкылдатуу менен сиз кыялданган окуй алат.\n
+        - Узак басуу жазып түзөтүп же жок кылууга мүмкүндүк берет.</string>
+    <string name="in_idea">- +Чыкылдатуу менен сиз жаңы идеяны кошсо болот.\n
+        - Жазууда басуу менен сиз сүрөттү көрө аласыз, басуу көпкө чейин жок кылат же жазууну өзгөртүүгө мүмкүндүк берет.</string>
+    <string name="in_finance">Терезе көзөмөлдөө сиздин финансы.\n
+        - Учтарындагы жогору карточка, алардын акча каражаттарын натыйжалуу пайдаланууга мүмкүндүк берет.\n
+        - Баскычы \'киреше\' жана \'чыгымдардын\' сизге канча акча алынган жана ошого жараша канча сарпталгандыгы жөнүндө жазууну кошууга мүмкүндүк берет.\n
+        - Бул жерде сиз +чыкылдатуу менен шаблон түзө аласыз каалаган болсо, шаблон чыгымдар бар.\n
+        - Шаблон узак басуу, аны алып салууга мүмкүндүк берет.\n
+        - Тарыхы мүмкүндүк берет көзөмөл жүргүзүүгө сиздердин бардык финансылык өзгөртүүлөрдү.</string>
+    <string name="in_setting">- Бул жерде сиз колдонмонун теманы жана тилин өзгөртө аласыз.</string>
+    <string name="instruction">Мүнөздөмөлөрү</string>
 </resources>
