--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -360,5 +360,42 @@
     <string name="new_event">Нова подія</string>
     <string name="diplom_work">Дипломна робота</string>
     <string name="phisology">Психологія</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(Не обов\'язково)</string>
+    <string name="hour">Години</string>
+    <string name="minute">Хвилина</string>
+    <string name="choose_app">Виберіть програму</string>
+    <string name="in_main_screen">- Тут ви можете відзначити що ви виконали ваше завдання з звичок, переглянути події і перейти в потрібну категорію.\n
+        - Довге натискання на дату в календарі, що знаходиться вгорі вікна дозволить вам додати нову подію або завдання на цей день в ваш розклад.</string>
+    <string name="in_categories">- Для створення нової категорії натисніть на +.\n
+        - Довге натискання на категорію викличе вікно де ви можете відредагувати, видалити або заблокувати її, а також змінити пароль.</string>
+    <string name="in_timetable">- Для створення нового запису клікніть на +. Ви можете вибрати один або відразу кілька днів.\n
+        - Натиснувши на день тижня ви можете переглянути всі записи на даний день. \n
+        - Довге натискання на запис дозволить вам видалити або відредагувати її.</string>
+    <string name="in_event">- Для створення нової події натисніть на +. Також ви можете встановити нагадування на потрібний вам час.\n
+        - Довге натискання на подію дозволить вам видалити або редагувати його.</string>
+    <string name="in_habit">Вікно, яке дозволить вам виробити бажану звичку.\n
+        - Для створення нової звички натисніть на +.\n
+        - Клікнувши на звичку ви можете відзначити що сьогодні виконали завдання.\n
+        - Довге натискання дозволить видалити або відредагувати її. Кнопка у верхньому лівому куті викличе меню. Тут ви можете дізнатися свій рівень, вибрати аватарку і додати ім\'я.</string>
+    <string name="in_focus">Вікно створено на основі теорії про 10000 годин яка свідчить, що саме стільки часу потрібно витратити щоб досягти професіоналізму в обраній області.\n
+        - Натиснувши на + ви можете додати нову дію, а також відкрити таймер або секундомір.\n
+        - Клікнувши на дію в списку ви можете вказати скільки витратили на нього хвилин. Час буде підсумовуватися.\n
+        - Довге натискання дозволить відкрити таймер або секундомір звідки час додасться в вашу запис. При бажанні тут же ви можете її видалити.</string>
+    <string name="in_standup">Практика використовується у великих компаніях для оптимізації процесу. Кожен співробітник щодня пише звіт про виконану роботу і про виниклі проблеми.\n
+        - - Кнопка + дозволить створити новий стенд ап.\n
+        - Довге натискання на запис викличе вікно де ви можете видалити, відредагувати або поділитися стендапом.</string>
+    <string name="in_dream">Вікно де ви можете відстежувати час витрачений на сон.\n
+        - Клікнувши на + ви можете створити новий запис.\n
+        - Натиснувши на запис ви можете прочитати що вам снилося.\n
+        - Довге натискання дозволить відредагувати або видалити запис.</string>
+    <string name="in_idea">- Клікнувши на + ви можете додати нову ідею.\n
+        - Натиснувши на запис ви можете переглянути картинку, довге ж натискання дозволить видалити або відредагувати запис.</string>
+    <string name="in_finance">Вікно для відстеження ваших фінансів.\n
+        - Вгорі картка з порадами, які дозволять вам продуктивніше розпоряджатися своїми грошима.\n
+        - Кнопки \'дохід\' і \'витрата \' дозволять вам додати запис про те скільки ви отримали грошей і скільки витратили відповідно.\n
+        - Тут є шаблонні витрати, при бажанні ви можете створити свій шаблон натиснувши на +.\n
+        - Довге натискання на шаблон дозволить його видалити.\n
+        - Історія дозволить простежити всі ваші фінансові зміни.</string>
+    <string name="in_setting">- Тут ви можете змінити тему і мову програми.</string>
+    <string name="instruction">Інструкція</string>
 </resources>
