--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,5 +379,42 @@
     <string name="new_event">Новое событие</string>
     <string name="diplom_work">Дипломная работа</string>
     <string name="phisology">Психология</string>
-    <string name="not_necessary">(Необязательно)</string>
+    <string name="not_necessary">(Не обязательно)</string>
+    <string name="hour">Часы</string>
+    <string name="minute">Минуты</string>
+    <string name="choose_app">Выберите приложение</string>
+    <string name="in_main_screen">- Здесь вы можете отметить что вы выполнили ваше задание из привычек, просмотреть события и перейти в нужную категорию.\n
+        - Долгое нажатие на дату в календаре, что находится вверху окна позволит вам добавить новое событие или задачу на этот день в ваше расписание.</string>
+    <string name="in_categories">- Для создания новой категории нажмите на +.\n
+        - Долгое нажатие на категорию вызовет окно где вы можете отредактировать, удалить или заблокировать ее, а также сменить пароль.</string>
+    <string name="in_timetable">- Для создания новой записи кликните на +. Вы можете выбрать один или сразу несколько дней.\n
+        - Нажав на день недели вы можете просмотреть все записи на данный день. \n
+        - Долгое нажатие на запись позволит вам удалить или отредактировать ее.</string>
+    <string name="in_event">- Для создания нового события нажмите на +. Так же вы можете установить напоминание на нужное вам время.\n
+        - Долгое нажатие на событие позволит вам удалить или редактировать его.</string>
+    <string name="in_habit">Окно, которое позволит вам выработать желаемую привычку.\n
+        - Для создания новой привычки нажмите на +.\n
+        - Кликнув на привычку вы можете отметить что сегодня выполнили задание.\n
+        - Долгое нажатие позволит удалить или отредактировать ее. Кнопка в верхнем левом углу вызовет меню. Тут вы можете узнать свой уровень, выбрать аватарку и добавить имя.</string>
+    <string name="in_focus">Окно создано на основе теории о 10000 часов которая гласит, что именно столько времени нужно потратить чтобы достигнуть профессионализма в выбранной области.\n
+        - Нажав на + вы можете добавить новое действие, а также открыть таймер или секундомер.\n
+        - Кликнув на действие в списке вы можете указать сколько потратили на него минут. Время будет суммироваться.\n
+        - Долгое нажатие позволит открыть таймер или секундомер откуда время добавится в вашу запись. При желании тут же вы можете ее удалить.</string>
+    <string name="in_standup">Практика использующаяся в крупных компаниях для оптимизации процесса. Каждый сотрудник ежедневно пишет отчёт о проделанной работе и о возникших проблемах.\n
+        - Кнопка + позволит создать новый стэндап.\n
+        - Долгое нажатие на запись вызовет окно где вы можете удалить, отредактировать или поделиться стэндапом.</string>
+    <string name="in_dream">Окно где вы можете отслеживать время потраченное на сон.\n
+        - Кликнув на + вы можете создать новую запись.\n
+        - Нажав на запись вы можете прочитать что вам снилось.\n
+        - Долгое нажатие позволит отредактировать или удалить запись.</string>
+    <string name="in_idea">- Кликнув на + вы можете добавить новую идею.\n
+        - Нажав на запись вы можете просмотреть картинку, долгое же нажатие позволит удалить или отредактировать запись.</string>
+    <string name="in_finance">Окно для отслеживания ваших финансов.\n
+        - Вверху карточка с советами, которые позволят вам продуктивнее распоряжаться своими деньгами.\n
+        - Кнопки \'Доход\' и \'Расход\' позволят вам добавить запись о том сколько вы получили денег и сколько потратили соответственно.\n
+        - Здесь есть шаблонные расходы, при желании вы можете создать свой шаблон нажав на +.\n
+        - Долгое нажатие на шаблон позволит его удалить.\n
+        - История позволит проследить все ваши финансовые изменения.</string>
+    <string name="in_setting">- Тут вы можете изменить тему и язык приложения.</string>
+    <string name="instruction">Инструкции</string>
 </resources>
